已經打通後端可以通知前端

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <script src="./node_modules/hammerjs/hammer.js"></script>
 
         <script src="./node_modules/jquery/dist/jquery.js"></script> 
-        <!-- <script src="js/jquery-ui.js"></script>
+        <script src="js/jquery-ui.js"></script>
         <script src="js/jquery.limitslider.js"></script>
-        <script src="js/bootstrap.min.js"></script>  -->
+        <script src="js/bootstrap.min.js"></script>  
         <base href="./">
         <!-- <title>Angular2</title>  -->
           <script src="./systemjs.config.js"></script>         
